ajuste de base.html parte 3

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,9 @@
 <body>
     <h2>Gestão Simplificada de Unidades Produtivas</h2>
     <nav>
-        <a href="{% url 'prestador' %}"> Prestador </a><br>
-        <a href="{% url 'materias' %}"> Materias Primas</a>
+        <a href="{% url 'produtos' %}"> Prestador </a><br>
+        <a href=> Materias Primas</a>
+
 
     </nav>
     {% block conteudo %}
