--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,11 @@
 <body>
     <h2>Gestão Simplificada de Unidades Produtivas</h2>
     <nav>
-        <a href="{% url 'produtos' %}"> Prestador </a><br>
-        <a href=> Materias Primas</a>
+        <a href="{% url 'produtos' %}"> Prestador</a>
+        <a href="{% url 'materias' %}"> Materias Primas</a>
+        <a href=""> Processo de Produção </a>
+        <a href=""> Materias Primas</a>
+        <a href=""> Etapa de Materia</a>
 
 
     </nav>
