Views de Materia Prima e Prestadore de Serviço implementadas

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
 <body>
     <h2>Gestão Simplificada de Unidades Produtivas</h2>
     <nav>
-        <a href="{% url 'produtos' %}"> Prestador</a>
-        <a href="{% url 'materias' %}"> Materias Primas</a>
+        <a href="{% url 'prestador' %}"> Prestador</a>
+        <a href="{% url 'materia' %}"> Materias Primas</a>
         <a href=""> Processo de Produção </a>
         <a href=""> Materias Primas</a>
         <a href=""> Etapa de Materia</a>
