Atualizando a classe populabd.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <h2>Gestão Simplificada de Unidades Produtivas</h2>
     <nav>
-        <a href="{% url 'prestador' %}"> Prestador</a>
+        <a href="{% url 'prestador' %}"> Prestadores de Serviços</a>
         <a href="{% url 'materia' %}"> Materias Primas</a>
         <a href=""> Processo de Produção </a>
         <a href=""> Materias Primas</a>
@@ -21,7 +21,8 @@
 
     </nav>
     {% block conteudo %}
-        <h3>Bem vindo ao sistema de controle de vendas</h3>
+        <h3>Bem vindo ao Sistema de Gestão Simplificada de Unidades Produtivas</h3>
+        <img src="Logo.png" width="746" height="282">
     {% endblock %}
 </body>
 </html>
